report up-to-date in forsyde

--- a/report/references.bib
+++ b/report/references.bib
@@ -87,6 +87,11 @@
     crossref={nand2tetris-book}
 }
 
+@inbook{nand2tetris-chapter-cpu,
+    chapter={Computer Architecture},
+    crossref={nand2tetris-book}
+}
+
 @misc{website:ghc-typenats,
     title={Type-level naturals in GHC},
     month={November},
